--- a/index.html
+++ b/index.html
@@ -6,9 +6,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Navbar</title>
   <link rel="stylesheet" href="./styles.css">
+  <link rel="shortcut icon" href="./images/icons8-nav-16.png" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
+  <header>
+    <nav class="navbar">
+      <h1>Coding <span class="h1-span">Addict</span></h1>
+      <ul class="links" role="list">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./index.html">About</a></li>
+        <li><a href="./index.html">Projects</a></li>
+        <li><a href="./index.html">Contact</a></li>
+      </ul>
+      <ul class="social-links" role="list">
+        <li><a href="./index.html"><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href="./index.html"><i class="fa-brands fa-twitter"></i></a></li>
+        <li><a href="./index.html"><i class="fa-brands fa-square-instagram"></i></a></li>
+        <li><a href="./index.html"><i class="fa-brands fa-linkedin"></i></a></li>
+        <li><a href="./index.html"><i class="fa-brands fa-youtube"></i></a></li>
+      </ul>
+    </nav>
+  </header>
   <script src="./script.js"></script>
 </body>
 
