--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
 <body>
   <header>
     <nav class="navbar">
-      <h1>Coding <span class="h1-span">Addict</span></h1>
-      <ul class="links" role="list">
+      <div class="small-screen-navbar">
+        <h1>Coding <span class="h1-span">Addict</span></h1>
+        <button class="hamburger"><i class="fa-solid fa-bars hamburger-icon jsHamburgerIcon"></i></button>
+      </div>
+      <ul class="links jsLinks" role="list">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./index.html">About</a></li>
         <li><a href="./index.html">Projects</a></li>
@@ -33,6 +36,7 @@
         <li><a href="./index.html"><i class="fa-brands fa-linkedin"></i></a></li>
         <li><a href="./index.html"><i class="fa-brands fa-youtube"></i></a></li>
       </ul>
+
     </nav>
   </header>
   <script src="./script.js"></script>
